files/style.css
.bugnote-icons {
    width: 100%;
    height: 35px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 10px;
    border-radius: 5px;
}

.bugnote-icon {
    font-size: 20px;
    color: white;
    cursor: pointer;
    padding: 5px;
    color: #1D2024;
}

.bugnote-icon:hover{
    background-color: #CCCCCC;
    cursor: pointer;
}


@media only screen and (max-width: 1886px) {
    body {
        .bugnote-icons {
        }

    }
}


emoji-picker {
    position: absolute;
    top: 100px;
    left:300px;
    z-index: 1000;
    display: none;  /* Na začiatku skrytý */
}

/*REACTION*/
.bugnote-reaction-icons{
    /*border: 1px solid #CCCCCC;*/
    /*border-radius: 5px;*/
    /*background-color: #CCCCCC;*/
    /*padding: 2px;*/
    /*display: none;*/
}

.reaction-tooltip {
    display: none;
    position: fixed;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
    padding: 8px;
    background-color: #333;
    color: #fff;
    border-radius: 4px;
    font-size: 12px;
    white-space: nowrap;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
}

.reaction-modal {
    padding: 8px;
    width: 300px;
    background-color: black;
    color: #ffffff;
    border: 1px solid #ddd;
    border-radius: 6px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
    z-index: 1000;
    font-size: 14px;

    /* Zalamovanie textu */
    white-space: normal;
    word-wrap: break-word; /* Zalomí dlhé slová, ak presahujú šírku */
    word-break: break-word; /* Alternatíva na zalomenie dlhých slov */
}

.no-scroll {
    overflow: hidden;
}




#emojiPickerModal{
    overflow: hidden;

}

/* Nastavenie veľkosti modalu */
#emojiPickerModal .modal-dialog {
    max-width: 100%; /* Môžete upravit podľa potreby */
    width: auto;
}

/* Nastavenie maximálnej výšky a skrolovania pre telo modalu */
#emojiPickerModal .modal-body {
    max-height: 400px;  /* Nastavte výšku podľa potreby */
    overflow-y: auto;   /* Povolenie vertikálneho posúvania */
}

/* Voliteľne, môžete nastavit šírku a výšku pre celkový modal */
#emojiPickerModal .modal-content {
    max-width: 300px; /* Nastavte šírku podľa potreby */
}



.emoji-filters {
    display: flex;          /* Zobrazí položky v riadku */
    justify-content: flex-start;  /* Zarovná položky na začiatok */
    gap: 10px;              /* Pridá medzeru medzi tlačidlami */
    /*flex-wrap: wrap;        !* Ak je potrebné, položky sa zbalí na ďalší riadok *!*/
    margin-bottom: 10px;    /* Pridá medzeru pod filtrami */
}

.emoji-filter-btn {
    display: flex;          /* Umožní kontrolu nad riadkom */
    align-items: center;    /* Zarovná smajlíky vertikálne */
    cursor: pointer;        /* Ukazovateľ na tlačidlách */
}

.emoji-filter-link {
    font-size: 12px;        /* Veľkosť smajlíka */
    /*padding: 5px;           !* Medzera okolo smajlíka *!*/
    transition: transform 0.3s ease; /* Efekt pri prejdení myšou */
}

.emoji-filter-link:hover {
    transform: scale(1.2);  /* Zvýši veľkosť smajlíka pri hover */
}

/*body.modal-open {*/
/*    height: 100vh; !* Uzamkne výšku na veľkosť viewportu *!*/
/*    overflow-y: hidden; !* Skryje vertikálne skrolovanie *!*/
/*    padding-right: 15px; !* Kompenzácia pre šírku scrollbar-u *!*/

/*    background-color: red !important;*/
/*    color: red !important;*/
/*}*/

/*.emoji-group {*/
/*    display: flex;          !* Umožní kontrolu nad riadkom *!*/
/*    align-items: center;    !* Zarovná smajlíky vertikálne *!*/
/*    cursor: pointer;        !* Ukazovateľ na tlačidlách *!*/
/*}*/

.emoji-btn{
    border: none;
    background-color: #ffffff;

}

.modal-body {
    overflow-y: auto;
    max-height: 400px; /* Nastav výšku podľa potreby */
}

